fixed .c8 letter spacing

--- a/homepage/171019/css/styles.less
+++ b/homepage/171019/css/styles.less
@@ -676,7 +676,7 @@ img, video {
     					}
 
     					padding: 20px 0px 23px 51px;
-    					letter-spacing: 1.1px;
+    					letter-spacing: 0px;
     					width: 770px;
     					float: left; 
     				}
